--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -1,40 +1,96 @@
 <div class="pt-4 pb-3">
 <app-header></app-header>
 </div>
-<section class="container pl-5 pr-5 h-75">
-     <div class="row h-100 w-100">
-       
-        <div class="col-sm-5 h-100">
-          <img src="../../../assets/images/croped demo.png" class=" h-100 w-100">
-        </div>
-                    <div class="col-sm-7 h-100 ">
-                      <div class="pt-5 pb-5 h-100 ">
-                      <p class="small about-text h-100 ">David Capmbell<br>
-                        David Campbell heralds from entrepreneurial blood<br>
-                        his 3rd Great<br>
-                        Grandfather, Robert Campbell, was Australia's original merchant in<br>
-                        Campbell & Co.<br>
-                        David, a carpenter by trade, is passionate about creating buildings<br>
-                        of exceptional quality and durability.<br>
-                        He hos pioneered his very own site management software which hos<br>
-                        been downloaded by tens of thousands of users from all around the<br>
-                        world.<br>
-                        David is the President of the Manly division of (MBA) Master guilders<br>
-                        Association and a member of (HIA) the Housing Industry of Australia.<br>
-                        He is also a member of the prestigious Notional Association of<br>
-                        Home Builders (NAHB) in the U.S.<br>
-                        "David is committed to the industry and is constantly searching for<br>
-                        new innovations and best building practices. He travels to the United<br>
-                        States multiple times a year and is active in professional housing<br>
-                        associations. The bestl"<br>
-                        Buffington Homes - South Carolina<br>
-
-                      </p>
-                      </div>
+      
+              <!-- <div class="footer pr-5 pt-3">
+              <app-footer></app-footer>
+              </div> -->
+              
+              <!-- <div class="footer pt-2">
+                <app-footer></app-footer>
+                </div> -->
+            
+                <div id="carouselExampleSlidesOnly" class="carousel slide "  data-pause="false" data-interval="4500" data-ride="carousel">
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <section class="container cont1 pl-5 pr-5 section1">
+                        <div class="row h-100 w-100" style="overflow: auto">
+                          
+                           <div class="col-md-6 h-100">
+                             <img src="../../../assets/images/croped demo.png" class="logo h-100 w-100 pl-4 ml-2">
+                           </div>
+                                       <div class="col-md-6 h-100">
+                                         <div class="pt-4 pb-5 pl-3 h-100 main-text">
+                                         <p class="small about-text h-100">David Capmbell<br>
+                                           Director<br><br>
+                                           David Campbell heralds from entrepreneurial blood his - 3rd Great<br>
+                                           Grandfather, Robert Campbell, was Australia's original merchant in<br>
+                                           Campbell & Co.<br>
+                                           David, a carpenter by trade, is passionate about creating buildings<br>
+                                           of exceptional quality and durability.<br>
+                                           He has pioneered his very own site management software which has<br>
+                                           been downloaded by tens of thousands of users from all around the<br>
+                                           world.<br>
+                                           
+                                           David is the President of the Manly division of (MBA) Master Builders<br>
+                                           Association and a member of (HIA) the Housing Industry of Australia.<br>
+                                           He is also a member of the prestigious National Association of<br>
+                                           Home Builders (NAHB) in the U.S.<br>
+                                           <i>"David is committed to the industry and is constantly searching for<br>
+                                           new innovations and best building practices. He travels to the United<br>
+                                           States multiple times a year and is active in professional housing<br>
+                                           associations. The bestl"</i><br>
+                                           <span class="text-center px-5">Buffington Homes - South Carolina</span>
+                                         </p>
+                                         </div>
+                                       </div>
+                               
+                                    </div> 
+                                   
+                               </section>
                     </div>
-            
-                 </div> 
-                
-            </section>
-            <app-footer></app-footer>
-            
+                    <div class="carousel-item h-100">
+                      <section class=" container aboutus1 h-100 pl-5 pr-5">
+                        <div class="row h-100 pl-3 pr-5 img">
+                          <div class="col-sm-12 col-md-12 col-lg-12 h-100 w-100 column-1">
+                            <div class="col-sm-12 col-md-12 col-lg-12 h-100 text-white text-small">
+                                <p class="pt-5 mt-4 small about-text h-100">
+                                  David Campbell Building Pty Ltd (PCB)<br>
+                                  specialise in The construction of<br>
+                                  designed residential<br>
+                                  buildings, ext ns ns, renovations: gnd!<br>
+                                  interiors.<br>
+                                  OCB was established i n 1999 by ner<br>
+                                  and Director, David Campbell.<br>
+                                  David has always maintained a principled<br>
+                                  approach to business "Trust and tradition"<br>
+                                  and has invested in employing the best<br>
+                                  team of skillÅd tradesman within bCB.<br>
+                                  We cover every aspect of the building<br>
+                                  process, .dolivering a consist<br>
+                                  at<br>
+                                  cohesive resylt.<br>
+                                  OCB was MOA 2019 *Vilder.f The<br>
+                                  Excellence in Housin Awar s.<br><br><br><br><br><br>
+                                 
+                                  
+                  
+                                </p>
+                            </div>
+                            
+                          </div>
+                          
+                      </div>
+                  </section>
+                    </div>
+                    <!-- <div class="carousel-item h-100 w-100">
+                        <section class=" container aboutus1 h-100 pl-5 pr-5">
+                            <div class="row h-100 pl-3 pr-5 img ">
+                              <div class="col-sm-12 col-md-12 col-lg-12 h-100 w-100 column-1">
+                      <img class="d-block w-100 h-75 " src="../../../assets/images/David .png" alt="Third slide">
+                              </div>
+                            </div>
+                    </section>
+                    </div> -->
+                  </div>
+                </div>
