--- a/src/app/components/about-us1/about-us1.component.html
+++ b/src/app/components/about-us1/about-us1.component.html
@@ -1,37 +1,38 @@
 <section class="header pt-4 pb-3">
 <app-header class="header-text-black"></app-header>
 </section>
-<section class=" container aboutus1 h-75 pl-5 pr-5" >
-      <div class="row h-100 pl-3 pr-5">
-        <div class="col-sm-12 h-100" style="background-image: url('../../../assets/images/20-DCB-proj-2.jpg'); background-size: cover">
-          <div class="col-4 h-100 text-white text-small pt-5">
-              <p class="pt-3 small about-text h-100">
+<section class=" container aboutus1 h-100 pl-5 pr-5">
+      <div class="row h-100 pl-3 pr-5 img ">
+        <div class="col-sm-12 col-md-12 col-lg-12 h-100 w-100 column-1">
+          <div class="col-sm-12 col-md-12 col-lg-12 h-100 text-white text-small animated flipInY slower ">
+              <p class="pt-5 mt-4 small about-text h-100">
                 David Campbell Building Pty Ltd (PCB)<br>
-specialise in The construction of<br>
-designed residential<br>
-buildings, ext ns ns, renovations: gnd!<br>
-interiors.<br>
-OCB was established i n 1999 by ner<br>
-and Director, David Campbell.<br>
-David has always maintained a principled<br>
-approach to business "Trust and tradition"<br>
-and has invested in employing the best<br>
-team of skillÅd tradesman within bCB.<br>
-We cover every aspect of the building<br>
-process, .dolivering a consist<br>
-at\d<br>
-cohesive resylt.<br>
-OCB was MOA 2019 *Vilder.f The<br>
-Excellence in Housin Awar s.<br>
-DAVID CAMPBELL BUILDING PTY LTD<br>
+                specialise in The construction of<br>
+                designed residential<br>
+                buildings, ext ns ns, renovations: gnd!<br>
+                interiors.<br>
+                OCB was established i n 1999 by ner<br>
+                and Director, David Campbell.<br>
+                David has always maintained a principled<br>
+                approach to business "Trust and tradition"<br>
+                and has invested in employing the best<br>
+                team of skillÅd tradesman within bCB.<br>
+                We cover every aspect of the building<br>
+                process, .dolivering a consist<br>
+                at<br>
+                cohesive resylt.<br>
+                OCB was MOA 2019 *Vilder.f The<br>
+                Excellence in Housin Awar s.<br><br><br><br><br><br>
+               
+                
+
               </p>
           </div>
-          <div class="col-8"></div>
+          
         </div>
-        <div class="col-sm-6">
-        </div>
+        
     </div>
 </section>
-<div class="footer pr-5 pt-4">
+<!-- <div class="footer pr-5 pt-3">
 <app-footer></app-footer>
-</div>
+</div> -->
