--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,10 +1,12 @@
-
-
-<div class="pt-4 pb-4"><app-header class="header-text-black"></app-header></div>
+<div class="pt-4 pb-4">
+    <app-header class="header-text-black">
+    </app-header>
+</div>
 <section>
-    <div class="container pl-5 pr-5">
+    <div class="container pt-2 pl-5 pr-5 main">
       <div class="row">
-        <div class="col-sm-3 pl-4">
+        <div class="col-lg-3 col-md-12 col-sm-12 pl-5  checkbox-input">
+            <div class="text">
             <p class="small">Everything we can do<br>
                 to help you and make <br>
                 your life easier!</p>
@@ -18,29 +20,30 @@
                     I'd prefer you to email me
                 </span><br>
                 <br>
-<p class="small">
-    Fill in your details click the<br>
-     communication you would<br>
-      prefer and we'll be in touch.<br>
-    </p>
-<p class="small">
-    If you prefer you can contact<br>
-    David's Personal assistant:<br>
-    Nada on<br>
-    +61 2 8399 3333 or<br>
-    email: Nada@DCB.com.au
+                <p class="small">
+                Fill in your details click the<br>
+                communication you would<br>
+                prefer and we'll be in touch.<br>
+                </p>
+                <p class="small">
+                If you prefer you can contact<br>
+                David's Personal assistant:<br>
+                Nada on<br>
+                +61 2 8399 3333 or<br>
+                email: Nada@DCB.com.au
 
-</p>
+                </p>
 
-            <div class="pt-2">
-                <img src="../../../assets/DCB Web Logos/Facebook.png" class="h-25 w-25">
-                <img src="../../../assets/DCB Web Logos/Instagram.jpeg" style="width:95px">
-                <img src="../../../assets/DCB Web Logos/linked in.jpeg" class="h-25 w-25">
+            <div class="pt-2 pb-2">
+                <img src="../../../assets/DCB Web Logos/Facebook.png"style="width:10%" class="logo">
+                <img src="../../../assets/DCB Web Logos/Instagram.jpeg" style="width:18%" class="insta-logo">
+                <img src="../../../assets/DCB Web Logos/linked in.jpeg" style="width:10%" class="logo">
             </div>
+        </div>
       </div>
 
-        <div class="col-sm-4">
-            <div class="container contact-form">
+        <div class="col-lg-4">
+            <div class="container pt-1 contact-form">
                 <form class="form-group">
                    
                         <input type="text" placeholder="Name:" class="form-control form-control-sm">
@@ -49,29 +52,30 @@
                         <input type="text" placeholder="Contact no:" class="form-control form-control-sm mb-2">
                         <div class="pb-2">
                         <textarea class="form-control form-control-sm pb-1" placeholder="Address:" rows="3" ></textarea>
-                    </div>
+                        </div>
                         <textarea class="form-control form-control-sm p-1" placeholder="Message:" rows="5" ></textarea>
-
-                        
 
                     </form>
                     <p class="small">David Campbell Building Pty Ltd<br>
                     11U 175 Lower Gibbes Street Chatswood NSW 2067<br>
-                ABN: 1234567-Builders Licence # 1234567<br>
-            +61 2 8399 3333</p>
+                    ABN: 1234567-Builders Licence # 1234567<br>
+                    +61 2 8399 3333</p>
                 </div>
         </div>
-        <div class="col-sm-5 pr-5">
-            <img src="../../../assets/images/contact-image.png" class="h-100 w-100">
-                    </div>
-    </div>
-    <div class="row">
-        <div class="col">
-
+        <div class="col-lg-5 pr-5 map-image">
+            <div class="pr-2">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3316.0907424842776!2d151.1954313!3d-33.7841548!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b0d56fe2e055129%3A0xc30c6e2aa6217e1!2sDavid%20Campbell%20Building%20Pty%20Ltd!5e0!3m2!1sen!2sin!4v1573801249245!5m2!1sen!2sin" 
+                width="100%" 
+                height="450" 
+                frameborder="0" 
+                style="border:0;" 
+                allowfullscreen="">
+            </iframe>
         </div>
+    </div>
     </div>
     </div>
 </section>
-<div class="pr-5 pt-4">
-<app-footer></app-footer>
-</div>
+        <!-- <div class="pr-4 mr-5 mt-4 footer">
+          <app-footer></app-footer>
+           </div> -->
