--- a/src/app/components/facts/alteration/alteration.component.html
+++ b/src/app/components/facts/alteration/alteration.component.html
@@ -1,28 +1,26 @@
 <section class="container">
     <div class="row pl-5 pr-5">
-        <div class="col-sm-8">
+        <div class="col-md-9">
       </div>
-      <div class="col-sm-4 pb-3">
+      <div class="col-md-3 pb-3">
           <p class="text small"><strong>Altrations and additions</strong></p>
         </div>
     </div>
      <div class="row h-100 pl-5 pr-5">
-        <div class="col-sm-8">
-          <img src="../../../../assets/images/alterations.png" class="image-responsive h-100 w-100">
+        <div class="col-md-9 col-sm-12 h-100">
+          <img src="../../../../assets/images/alterations.png" class="img h-100 w-100 pl-4">
         </div>
-        <div class="col-sm-4">
-          <p class="text small">
-              Alterations and additions<br>
+        <div class="col-md-3 col-sm-12 col-xs-12 h-75">
+          <p class="text small alteration-text">
               For alterations and additions, you<br>
-              generally wil<br>
-              need to mcwe out<br>
-              for a period oftime. it will greatly<br>
-              speed up the process arrd save<br>
+              generally will need to mowe out<br>
+              for a period of time, it will greatly<br>
+              speed up the process and save<br>
               us all time and money.<br>
-              DCg will always be available for<br>
+              DCB will always be available for<br>
               you make the building process<br>
-              a pleasurable experience that<br>
-              you will irvite us to the party at<br>
+              a pleasurable experience so that<br>
+              you will invite us to the party at<br>
               the end! That will be the greatest<br>
               compliment to us!<br>
           </p>
@@ -31,3 +29,6 @@
      </div> 
     
 </section>
+<!-- <div class="pt-5 mt-5 footer mr-5">
+    <app-footer></app-footer>
+    </div> -->
