--- a/src/app/components/facts/architects/architects.component.html
+++ b/src/app/components/facts/architects/architects.component.html
@@ -1,28 +1,28 @@
 
         <section class="container pl-5 pr-5">
             <div class="row">
-                <div class="col-sm-4 offset-1">
+                <div class="col-md-6">
               </div>
-              <div class="col-sm-5 offset-2 pb-4">
-                  <p class="text small"><strong>Architects</strong></p>
+              <div class="col-md-6 pb-1">
+                  <p class="text small title"><strong>Architects</strong></p>
                 </div>
             </div>
-             <div class="row pl-5 pr-5 h-100">
-                <div class="col-sm-7">
-                  <img src="../../../../assets/images/architects.png" class="image-responsive h-100 w-100">
+             <div class="row pl-5 pr-5 h-100 content">
+                <div class="col-md-7">
+                  <img src="../../../../assets/images/architects.png" class="image-responsive h-100 w-100 border">
                 </div>
-                <div class="col-sm-5">
-                  <p class="small">
-                      Most profssional architects are worth the ime±ment. they<br>
-                      are very good at designing indMiduaI client requirements.<br>
-                      personalised scope of works, a schedule of finishes and<br>
+                <div class="col-md-5">
+                  <p class="small architect-text">
+                      Most profssional architects are worth the investment, they<br>
+                      are very good at designing individual client requirements;<br>
+                      personalised scope of works; a schedule of finishes and<br>
                       detailed specifcations.<br>
-                      This is what we as professional builders need to allcnv us to<br>
-                      prcvide accurate pricing in advance which minimises changes<br>
-                      and<br>
+                      This is what we as professional builders need to allow us to<br>
+                      provide accurate pricing in advance which minimises changes<br>
+                      and surprises.<br>
                       Architects are neither builders nor estimators.<br>
                       They can only give you a guide using historical prices for<br>
-                      their designs. ONLY f the project is recent and very similar<br>
+                      their designs. ONLY if the project is recent and very similar.<br>
                       Trust your professional builder to provide accurate pricing<br>
                       with backup data alternative selections if available.<br>
                     
@@ -32,3 +32,6 @@
              </div> 
             
         </section>
+        <!-- <div class="pt-5 mt-5 footer mr-5">
+            <app-footer></app-footer>
+            </div> -->
