--- a/src/app/components/facts/beforebuilding/beforebuilding.component.html
+++ b/src/app/components/facts/beforebuilding/beforebuilding.component.html
@@ -1,39 +1,43 @@
 <section class="container">
     <div class="row">
-        <div class="col-sm-4 offset-1">
+        <div class="col-sm-12 col-md-4 offset-1">
       </div>
-      <div class="col-sm-7 pb-4">
-          <p class="small"><strong>Before Building</strong></p>
+      <div class="col-sm-12 col-md-7 pb-2">
+          <p class="small pl-4 title"><strong>Before Building</strong></p>
         </div>
     </div>
-     <div class="row h-100">
-       <!-- <div class="col-sm-2"></div> -->
-        <div class="col-sm-4 offset-1">
-          <img src="../../../../assets/images/beforebuilding.png" class="image-responsive h-100 w-100">
+     <div class="row h-100 px-4">
+       <!-- <div class="col-sm-12 col-md-1 border"></div> -->
+        <div class="col-sm-12 col-md-5">
+          <img src="../../../../assets/images/beforebuilding.png" class="img h-100 w-100 pl-5 ml-3">
         </div>
-        <div class="col-sm-7">
-          <p class="small">David Capmbell<br>
-            Director<br>
-            All building work these days is cheap. so if you're looking for cheap. we are<br>
-probably not the right fit. our goal is to prcvide quality and value to those who<br>
-seek the same<br>
-<strong>Home Owners Warranty Insurance</strong> (HOW') is reeded any residential project<br>
-value of $20,000.00.<br>
-The majority of building works need council apprcwal before work can commence.<br>
-this can be done in the way of a DA or a CDC:<br>
-<strong>DA: A Development Application</strong> is commonly referred to as a DA_ is a formal<br>
-request for consent to carry out proposed development. such as change of use<br>
-of land. subduide land. and carry out building. landscaping and other vÆTk_<br>
-<strong>CDC: Complying Developrnent Certificate</strong> is a fast-track apprcwal process for<br>
-straightforward residential. commercial and irrdustrial development<br>
-If the application meets specific criteria. it can be determined by a council or<br>
-accredited certifier<br>
-<strong>Architectural Drawings.</strong> Site Survey be required to obtain DA or CDC approval.<br>
-<strong>Bushfire reports</strong> will be needed if you are located In a bushfire mne_<br>
-DAVID CAMPBELL BUILDING PTY LTD<br>
+        <div class="col-sm-12 col-md-7 h-50">
+          <div class="h-50">
+          <p class="small beforebuilding-text pl-4">
+            All building work these days is not cheap. so if you're looking for cheap. we are<br>
+            probably not the right fit. our goal is to provide quality and value to those who<br>
+            seek the same<br>
+            <strong>Home Owners Warranty Insurance</strong> (HOW) is needed any residential project<br>
+             over the value of $20,000.00.<br>
+            The majority of building works need council approval before work can commence.<br>
+            this can be done in the way of a DA or a CDC:<br>
+            <strong>DA: A Development Application</strong> is commonly referred to as a DA. It is a formal<br>
+            request for consent to carry out proposed development. such as change of use<br>
+            of land, subdivide land and carry out building, landscaping and other work.<br>
+            <strong>CDC: Complying Development Certificate</strong> is a fast-track approwal process for<br>
+            straightforward residential. commercial and industrial development<br>
+            If the application meets specific criteria. it can be determined by a council or<br>
+            accredited certifier<br>
+            <strong>Architectural Drawings.</strong> Site Survey be required to obtain DA or CDC approval.<br>
+            <strong>Bushfire reports</strong> will be needed if you are located In a bushfire zone.<br>
+            <br>
           </p>
+        </div>
         </div>
 
      </div> 
     
 </section>
+<!-- <div class="pt-5 mt-5 footer mr-5">
+    <app-footer></app-footer>
+    </div> -->
