--- a/src/app/components/facts/expenses-to-consider/expenses-to-consider.component.html
+++ b/src/app/components/facts/expenses-to-consider/expenses-to-consider.component.html
@@ -1,9 +1,9 @@
-<section class="container">
-    <div class="row pr-4">
-        <div class="col-sm-4 offset-4">
+<section class="container w-100 pt-4">
+    <div class="row pr-4 pt-3">
+        <div class="col-md-4 offset-4">
       </div>
-      <div class="col-sm-4 pb-4">
-          <p class="text small"><strong> Expenses to consider</strong></p>
+      <div class="col-md-4">
+          <p class="text small title"><strong> Expenses to consider</strong></p>
         </div>
     </div>
      <!-- <div class="row h-100">
@@ -21,24 +21,27 @@
         </div>
 
      </div>  -->
-     <div class="row pl-5 pr-5" style="height: 390px; overflow: auto;">
-        <div class="col-sm-8  h-100">
-          <img src="../../../../assets/images/expensestoconsider.png" class="h-100 w-100">
+     <div class="row pl-5 pr-5 h-100 pt-3">
+        <div class="col-md-8  h-100">
+          <img src="../../../../assets/images/expensestoconsider.png" class=" img h-100 w-100 pl-4">
         </div>
-        <div class="col-sm-4">
-          <p class="text small">
-              You will need to pay a Long SeNice Leave Levy<br>
+        <div class="col-md-4 h-50">
+          <p class="text small expense-text">
+              You will need to pay a <strong>Long Service Leave Levy</strong><br>
               If you do not have good accurate drawings and<br>
               documentation to build the project at the start of<br>
-              pour building process. i-t will cost you additional<br>
-              money ard everpne more time after a project<br>
+              your building process, it will cost you additional<br>
+              money and everyone more time after a project<br>
               is underway.<br>
-              This is why the irvestmerrt in a good architect<br>
+              This is why the investment in a good architect<br>
               with detailed plans is so important. Remember the<br>
-              7 oflife?<br>
+              7 "P's" of life?<br>
           </p>
         </div>
 
      </div> 
     
 </section>
+<!-- <div class="pt-5 mt-5 footer mr-5">
+    <app-footer></app-footer>
+    </div> -->
