--- a/src/app/components/facts/house-keeping/house-keeping.component.html
+++ b/src/app/components/facts/house-keeping/house-keeping.component.html
@@ -1,33 +1,46 @@
-<section class="container">
-    <div class="row">
-        <div class="col-sm-3">
+<section class="container ">
+    <div class="row ">
+        <div class="col-md-3 ">
       </div>
-      <div class="col-sm-9 pb-4">
-          <p class="text small pl-4"><strong>House keeping</strong></p>
+      <div class="col-md-9 pb-2 ">
+          <p class="text small pl-5 title"><strong>House keeping</strong></p>
         </div>
     </div>
-     <div class="row px-5 h-100">
-        <div class="col-sm-3">
-          <img src="../../../../assets/images/housekeeping.png" class="image-responsive h-75 w-100">
+     <div class="row px-5 h-100 mx-3">
+        <div class="col-md-3">
+          <img src="../../../../assets/images/housekeeping.png" class="img h-75 w-100">
         </div>
-        <div class="col-sm-9">
-          <p class="small housekeeping-text">
-              When work starts it will be messy. dusty and noisy please expect this as normal while we but clean as we go.<br>
-              Neighbours may ccnne out express their concerns or complain We manage this for you by prowding tNem with a copy
+        <div class="col-md-9 ">
+          <p class="small housekeeping-text pl-1">
+              When work starts, it will be messy, dusty and noisy so please expect this as normal 
+              while we work, but clean as we go.<br>
+              Neighbours may come out express their concerns or complain. We manage this for 
+              you by providing them with a copy<br>
               of our "Pardon our Dust" letter with our job site supervisors contact information.<br>
-              Your garden immediately around the area will not surwive If there is that special tree plant that needs that<br>
-              love. we need to know before we start.<br>
-              are generally unforeseen problems or latent conditions with alterations art additions that would not have been<br>
-              allowed for Rain and with do affect the project completion date we will do our best to communicate are delays<br>
-              All the littLe extra bits of work request to be done during the project add up to a lot of money at the end of the<br>
-              project so we need to be organised at our site meetings to be as efficient cost-effective for It is our goal to<br>
+              Your garden immediately around the affected area area will not survive.
+               If there is that special
+               tree/plant that needs that extra
+              love. we need to know before we start.<br> There
+              are generally unforeseen problems or latent conditions with alterations and
+               additions that would not have been<br>
+              allowed for! Rain and wind do affect the project completion date so we will do
+               our best to communicate are delays<br>
+              All the little extra bits of work you request to be done during the project add
+               up to a lot of money at the end of the<br>
+              project so we need to be organised at our site meetings to be as efficient 
+              cost-effective for you. It is our goal: to<br>
               minimise changes and minimise hidden costs.<br>
-              guilding work does take up a lot of your time, with meetings. site inspections and selection of Prime Cost Items. We can
-              agree on a meeting schedule corvement you wmere you have the proper amount of time to help tme team.
-              Everpne an our team has responsibilities. deadlines arrd selection deadlines are most key. If these are delayed it will
-              certainly delay completion date in cases cost more
-              Most building products are made from natural resources and are susceptible to movements and minor defects.<br>
-              If a product is cheap. it's cheap for a reason! We have tried to accommodate clients with low budgets ard it never works
+              Building work does take up a lot of your time, with meetings. site inspections
+               and selection of Prime Cost Items. We can
+              agree on a meeting schedule convenient for you where you have the proper amount
+               of time to help the team.
+              Everyone an our team has responsibilities. deadlines and selection deadlines 
+              are the most key. If these are delayed it will
+              certainly delay completion date in most cases cost more.
+              Most building products are made from natural resources and are susceptible to 
+              movements and minor defects.<br>
+              If a product is cheap. it's cheap for a reason! We have tried to accommodate 
+              clients with low budgets and it never works<br>
               so it makes no sense to allow it any further. it's a disservice to everyone.<br>
           </p>
         </div>
@@ -35,3 +48,6 @@
      </div> 
     
 </section>
+<!-- <div class="pt-5 mt-5 footer mr-5">
+    <app-footer></app-footer>
+    </div> -->
