--- a/src/app/components/facts/timing-to-consider/timing-to-consider.component.html
+++ b/src/app/components/facts/timing-to-consider/timing-to-consider.component.html
@@ -1,28 +1,28 @@
 <section class="container pl-5 pr-5">
     <div class="row pl-5">
-        <div class="col-sm-6">
+        <div class="col-md-6">
       </div>
-      <div class="col-sm-4 offset-1 pb-3">
-          <p class="text small pl-5"><strong>Timing to consider</strong></p>
+      <div class="col-md-4 offset-1 pb-3">
+          <p class="text small pl-5 title"><strong>Timing to consider</strong></p>
         </div>
     </div>
-     <div class="row pl-5 pr-5">
-        <div class="col-sm-8 h-75">
-          <img src="../../../../assets/images/timingtoconsider.png" class="h-75 w-100">
+     <div class="row pl-5 pr-5 h-100">
+        <div class="col-md-8 h-100 w-100">
+          <img src="../../../../assets/images/timingtoconsider.png" class="img h-75 w-100">
         </div>
-        <div class="col-sm-4">
+        <div class="col-md-4">
           <p class="text small">
-              You will generally reed to consult an Engineer.<br>
+              You will generally need to consult an Engineer.<br>
               this should be done very early on in consultation<br>
-              with your builder and architect. but do not do<br>
-              your final drawings until have approval.<br><br>
-              Councils take a long time to apprcve works (this<br>
+              with your builder and architect, but do not do<br>
+              your final drawings until you have approval.<br>
+              Councils take a long time to approve works (this<br>
               varies between councils) so plan accordingly and<br>
-              expect this.<br><br>
-              Sydney Water may hold up pur approval as well<br>
-              if there are assets belonging to near pur<br>
+              expect this.<br>
+              Sydney Water may hold up your approval as well<br>
+              if there are assets belonging to then near your<br>
               proposed building works.<br>
-              <strong>Sydney Water Tap In</strong><br><br>
+              <strong>Sydney Water Tap In</strong><br>
               You will need to get a <strong>Dial before you Dig</strong><br>
               certificate<br>
           </p>
@@ -31,3 +31,6 @@
      </div> 
     
 </section>
+<!-- <div class="pt-5 mt-5 footer mr-5">
+    <app-footer></app-footer>
+    </div> -->
