--- a/src/app/components/interior/interior.component.html
+++ b/src/app/components/interior/interior.component.html
@@ -1,12 +1,47 @@
-<section>
-        <div>
-        <img class="img-bg" src="../../../assets/images/28-DCB-Interiors.jpg" alt="loading">
-        <div class="py-4">
-        <app-header class="header-text-white"></app-header>
+<div class="container py-4 header">
+    <app-header></app-header>
+</div>
+<div class="container-fluid px-0">
+
+    <div id="carouselExampleControls" class="carousel">
+        <div class="carousel-inner" role="listbox">
+            <div class="carousel-item active">
+                <div style="background: url(/assets/images/28-DCB-Interiors.jpg) no-repeat center center fixed; 
+            -webkit-background-size: cover;
+            -moz-background-size: cover;
+            -o-background-size: cover;
+            background-size: cover" class="d-flex align-items-center justify-content-center min-vh-100">
+                    <div></div>
+                </div>
+            </div>
+            <!-- <div class="carousel-item">
+                <div style="background: url(/assets/images/27-DCB-P&T-4-0.jpg) no-repeat center center fixed; 
+            -webkit-background-size: cover;
+            -moz-background-size: cover;
+            -o-background-size: cover;
+            background-size: cover" class="d-flex align-items-center justify-content-center min-vh-100">
+
+                    <div></div>
+
+
+
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div style="background: url(/assets/images/24-DCB-proj-3-0.jpg) no-repeat center center fixed; 
+                -webkit-background-size: cover;
+                -moz-background-size: cover;
+                -o-background-size: cover;
+                background-size: cover" class="d-flex align-items-center justify-content-center min-vh-100">
+
+                    <div></div>
+
+
+
+                </div>
+            </div> -->
+
+        </div>
+
     </div>
 </div>
-</section>
-<div class="footer">
-    <app-footer></app-footer>
-</div>
-
