--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
 <section>
-        <img class="img-bg" src="../../../assets/images/interior2.jpg" alt="loading">
+        <img class="img-bg" src="../../../assets/37 DCB  Log In-01.jpeg" alt="loading">
         <div class="pt-4 pb-4">
         <app-header></app-header>
 </div>
@@ -23,7 +23,7 @@
             <div class="col-sm-4 col-md-4 col-lg-4 m-auto d-block"></div>
                    
     </div>
-    <div class="footer">
+    <!-- <div class="footer">
 <app-footer></app-footer>
-</div>
+</div> -->
 </section>
