--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,3 +5,11 @@
 <app-dashboard>
 
 </app-dashboard> -->
+<!-- <slideshow [height]="'100%'"
+           [minHeight]="'525px'"
+           [autoPlay]="true"
+           [showArrows]="false"
+           [imageUrls]="imageUrls"
+           [lazyLoad]="imageUrls?.length > 1"
+           [autoPlayWaitForLazyLoad]="true">
+</slideshow> -->
