--- a/src/app/components/about-us/about-us.component.css
+++ b/src/app/components/about-us/about-us.component.css
@@ -1,4 +1,206 @@
 .about-text{
+    word-spacing: 1px;
     letter-spacing: 1px;
     /* word-spacing: 1px; */
 }
+.footer{
+margin-right: 70px;
+}
+.section1 {
+    height: 530px !important;
+}
+
+@media screen and (min-width:768px) and (max-width:1024px) {
+    .col-md-5 {
+        padding-top:50px !important;
+    }
+    .footer{
+        margin-top:0px !important;
+    }
+}
+@media screen and (max-width:767px) {
+    .col-md-5 {
+        padding-top:50px !important;
+    }
+    .footer{
+        margin-top:650px !important;
+        margin-right:30px !important;
+
+    }
+    .logo {
+        margin:0px !important;
+    }
+    .about-text {
+
+    padding-left: 7px;
+
+    }
+}
+@media screen and (max-width:540px) {
+    .col-md-5 {
+        padding-top:50px !important;
+    }
+    .footer{
+        margin-top:700px !important;
+        margin-right:30px !important;
+
+    }
+}
+@media screen and (max-width:1199px) {
+    .logo {
+        padding:0px !important;
+        margin:0px ;
+    }
+  
+}
+@media screen and (min-width:992px) and (max-width:1200px) {
+    
+   .main-text {
+       width:650px;
+   }
+   .logo {
+       padding-left: 22px !important;
+   }
+   .about-text {
+      letter-spacing: 0px !important;
+   }
+}
+@media screen and (max-width:371px) {
+    .col-md-5 {
+        padding-top:50px !important;
+    }
+    .footer{
+        margin-top:900px !important;
+        margin-right:30px !important;
+
+    }
+}
+@media screen and (max-width:992px) and (min-width:768px) and (max-height:850px) {
+    .col-md-5 {
+        padding-top:50px !important;
+    }
+    .footer{
+        margin-top:100px !important;
+        margin-right:30px !important;
+
+    }
+}
+@media screen and (max-width:992px) and (min-width:768px) {
+    .main-text {
+        padding:0px !important;
+        margin: 0px !important;
+    }
+}
+@media screen and (min-width:300px) and (max-width:331px) and (max-height:568px) {
+    .col-md-5 {
+        padding-top:50px !important;
+    }
+    .footer{
+        margin-top:900px !important;
+        margin-right:30px !important;
+
+    }
+}
+   @media screen and (width:768px) and (height:1024px) {
+  
+  .logo {
+    height:60% !important;
+    padding-right:100px;
+}
+  .container {
+    position: absolute;
+
+}
+  .footer {
+      margin-top:630px !important;
+      position: relative;
+      margin-right:70px !important;
+
+  }
+}
+@media screen and (width:1024px) and (height:1366px) {
+  
+    .logo {
+      height:50% !important;
+      padding-left:30px !important;
+
+  }
+  .container {
+      position: absolute;
+  
+  }
+    .footer {
+        margin-top:530px !important;
+        position: relative;
+        margin-right:10px !important;
+
+    }
+  }
+
+
+  /* //// */
+  .about-text{
+    letter-spacing: 1px;
+    /* word-spacing: 1px; */
+  
+  }
+  section {
+    height:100% !important;
+    /* width: 100% !important; */
+  }
+  .img {
+    padding-left: 50px !important;
+    padding-right: 50px !important;
+  
+  }
+  .column-1{
+    background-image: url('../../../assets/croped/DCB Home3.png');
+    background-size: cover !important;
+   
+    background-repeat: no-repeat;
+  }
+  
+  .img2 {
+  /* padding-bottom:300px !important;  */
+  }
+  /* .aboutus1 {
+    position:absolute;
+  }
+  .paragraph-aboutus {
+      position: relative;
+  } */
+  
+  
+  @media screen and (max-width:992px) {
+  
+   
+  }
+  @media screen and (max-width:767px) {
+   .row {
+          padding:0 10px 0 10px !important;
+   }
+   .cont1 {
+          padding:0 10px 0 10px !important
+   }
+    
+  }
+  @media screen and (max-width:540px) {
+   
+    
+  }
+  @media screen and (max-width:776px) and (min-width:320) {
+  
+    
+  }
+
+  /* //////////// */
+  .carousel-inner .carousel-item{
+    transition: -webkit-transform 2.5s ease;
+    transition: transform 2.5s ease;
+    transition: transform 2.5s ease, -webkit-transform 2.5s ease;
+  }
+
+     .aboutus1 {
+    height:100% !important;
+  }
+  
