--- a/src/app/components/facts/facts.component.html
+++ b/src/app/components/facts/facts.component.html
@@ -3,6 +3,6 @@
 <app-header></app-header>
 </div>
 <router-outlet></router-outlet>
-<div class="pt-3">
+<!-- <div class="pt-5 mt-5 footer mr-5">
 <app-footer></app-footer>
-</div>
+</div> -->
