--- a/src/app/components/facts/house-keeping/house-keeping.component.css
+++ b/src/app/components/facts/house-keeping/house-keeping.component.css
@@ -1,3 +1,54 @@
-.housekeeping-text {
+/* .housekeeping-text {
     letter-spacing: 1px;
+} */
+section {
+    height: 50%;
+    margin-top:70px;
+}
+.housekeeping-text {
+    word-spacing: 1px;
+}
+
+@media screen and (max-width: 400px) {
+    .footer {
+        font-size: 12px;
+    }
+    }
+    @media screen and (max-width:768px) and (max-height:1000px) {
+        .footer {
+            margin-top:500px !important;
+        }
+    }
+@media screen and (max-width:992px) {
+    section {
+       
+        margin-top:0px;
+    }
+}
+@media screen and (min-width:768px) and (max-width:1200px) {
+    .row {
+       
+        padding:0px 15px 0px 15px !important;
+        margin: 0px 15px 0px 15px  !important;
+    }
+}
+@media screen and (max-width:767px) {
+   img {
+       height:100% !important;
+   }
+   .col-md-9 {
+       padding-top:10px !important;
+   }
+   .title {
+    padding-left: 80px !important;
+   }
+   .row {
+       padding :0px 15px 0px 10px !important
+   }
+}
+@media screen and (max-width:540px) {
+    
+}
+@media screen and (max-width:359px) {
+   
 }
