--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,98 +1,77 @@
-
 <div class="pt-4 pb-5">
   <app-header class="headerblack"></app-header>
 </div>
-<section class="container">
-    <div class="container px-2">
-      <div class="row">
-        <div class="col-sm-5">
-            <div id="demo1" class="carousel carousel1 slide" data-interval="2000" data-ride="carousel">
-                
-                <div class="carousel-inner h-100 w-100">
-                  <div class="carousel-item active h-100">
-                    <img src="../../../assets/croped/DCB Home1.png"  class="h-100 w-100"   alt="Los Angeles">
-                  </div>
-                  <div class="carousel-item h-100">
-                    <img src="../../../assets/croped/DCB Home2.png" class="h-100 w-100" alt="Chicago">
-                  </div>
-                  <div class="carousel-item h-100">
-                    <img src="../../../assets/croped/DCB Home3.png"  class="h-100 w-100" alt="New York">
-                  </div>
-                  <div class="carousel-item h-100">
-                      <img src="../../../assets/croped/DCB Home4.png"  class="h-100 w-100" alt="New York">
-                    </div>
-                    <div class="carousel-item h-100">
-                        <img src="../../../assets/croped/DCB Home5.png"  class="h-100 w-100" alt="New York">
-                      </div>
-                      <div class="carousel-item h-100">
-                          <img src="../../../assets/croped/DCB Home6.png"  class="h-100 w-100" alt="New York">
-                        </div>
-                        <div class="carousel-item h-100">
-                            <img src="../../../assets/croped/DCB Home7.png"  class="h-100 w-100" alt="New York">
-                          </div>
-                          <div class="carousel-item h-100">
-                              <img src="../../../assets/croped/DCB Home8.png"  class="h-100 w-100" alt="New York">
-                            </div>
-                            <div class="carousel-item h-100">
-                                <img src="../../../assets/croped/DCB Home9.png"  class="h-100w-100" alt="New York">
-                              </div>
-                </div>
-                <a class="carousel-control-prev" href="#demo1" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                  </a>
-                  <a class="carousel-control-next" href="#demo1" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                  </a>
-              </div>
-        </div>
-        <!-- <div class="col-sm-1"></div> -->
-        <div class="col-sm-7">
-            <div id="demo2" class="carousel carousel2 slide" data-interval="2000" data-ride="carousel">
-                 
-                <div class="carousel-inner h-100">
-                  <div class="carousel-item active h-100">
-                    <img src="../../../assets/croped/DCB Home9.png" class="h-100 w-100" alt="Los Angeles">
-                  </div>
-                  <div class="carousel-item h-100">
-                    <img src="../../../assets/croped/DCB Home8.png" class="h-100 w-100" alt="Chicago">
-                  </div>
-                  <div class="carousel-item h-100">
-                    <img src="../../../assets/croped/DCB Home7.png" class="h-100 w-100" alt="New York">
-                  </div>
-                  <div class="carousel-item h-100">
-                      <img src="../../../assets/croped/DCB Home5.png" class="h-100 w-100" alt="New York">
-                    </div>
-                    <div class="carousel-item h-100">
-                        <img src="../../../assets/croped/DCB Home6.png" class="h-100 w-100" alt="New York">
-                      </div>
-                      <div class="carousel-item h-100">
-                          <img src="../../../assets/croped/DCB Home4.png" class="h-100 w-100" alt="New York">
-                        </div>
-                        <div class="carousel-item h-100">
-                            <img src="../../../assets/croped/DCB Home3.png" class="h-100 w-100" alt="New York">
-                          </div>
-                          <div class="carousel-item h-100">
-                              <img src="../../../assets/croped/DCB Home2.png" class="h-100 w-100" alt="New York">
-                            </div>
-                            <div class="carousel-item h-100">
-                                <img src="../../../assets/croped/DCB Home1.png" class="h-100 w-100" alt="New York">
-                              </div>
-                </div>
-                <a class="carousel-control-prev" href="#demo2" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                  </a>
-                  <a class="carousel-control-next" href="#demo2" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                  </a>
-              </div>
-        </div>
-      </div>
+
+<section class=" container">
+  <div class="row h-100" >
+    <!-- first -->
+    <div class="col-md-5 h-100" *ngIf="slide1">
+        <img src="../../../assets/croped/DCB Home1.png" class="h-100 w-100 FadeInAndOut column1-image" alt="Los Angeles">
     </div>
+    <div class="col-md-7 h-100 " *ngIf="slide1">
+        <img src="../../../assets/croped/DCB Home2.png" class="h-100 w-100 FadeInAndOut column2-image" alt="Los Angeles">
+    </div>
+    <!-- first end -->
+
+
+    <!-- second  -->
+    <div class="col-md-5 h-100  " *ngIf="slide2">
+        <img src="../../../assets/croped/DCB Home4.png" class="h-100 w-100 FadeInAndOut column1-image" alt="Chicago">
+    </div>
+    <div class="col-md-7 h-100" *ngIf="slide2">
+        <img src="../../../assets/croped/DCB Home3.png" class="h-100 w-100 FadeInAndOut column2-image" alt="Chicago">
+    </div>
+    <!-- second end  -->
+
+
+    <!-- third -->
+    <div class="col-md-5 h-100 " *ngIf="slide3">
+        <img src="../../../assets/croped/DCB Home6.png" class="h-100 w-100 FadeInAndOut column1-image" alt="New York">
+    </div>
+    <div class="col-md-7 h-100" *ngIf="slide3">
+        <img src="../../../assets/croped/DCB Home5.png" class="h-100 w-100 FadeInAndOut column2-image" alt="New York">
+    </div>
+    <!-- third end -->
+
+
+    <!-- fourth -->
+    <div class="col-12 h-100" *ngIf="slide4">
+        <img src="../../../assets/images/7 DCB Home.png" class="h-100 w-100 FadeInAndOut  single-image" alt="New York">
+    </div>
+    
+    <!-- fourth end -->
+
+
+    <!-- fifth -->
+    <div class="col-md-5 h-100 " *ngIf="slide5">
+        <img src="../../../assets/croped/DCB Home7.png" class="h-100 w-100 FadeInAndOut column1-image" alt="New York">
+    </div>
+    <div class="col-md-7 h-100" *ngIf="slide5">
+        <img src="../../../assets/croped/8 DCB Home.png" class="h-100 w-100 FadeInAndOut column2-image" alt="New York">
+    </div>
+    <!-- fifth end -->
+
+
+
+    <!-- sixth -->
+    <div class="col-md-5 h-100" *ngIf="slide6"> 
+        <img src="../../../assets/croped/DCB Home9.png" class="h-100 w-100 FadeInAndOut column1-image" alt="Los Angeles">
+    </div>
+    <div class="col-md-7 h-100" *ngIf="slide6">
+        <img src="../../../assets/croped/DCB Home8.png" class="h-100 w-100 FadeInAndOut column2-image" alt="Los Angeles">
+    </div>
+    <!-- sixth end -->
+
+
+   
+  </div>
 </section>
+
 <div class="pt-5 pr-5 footer">
-<app-footer></app-footer>
+ <span class=" border"> <app-footer></app-footer></span>
+</div>
+<!-- ///////////// -->
+
+<div id="makethisvanish" class="elementToFadeInAndOut h-100 w-100" *ngIf="vanish">
+  <img src="../../../assets/images/1-DCB-Home-logo.png" class="h-100 w-100 image-responsive">
 </div>
