--- a/src/app/components/interior/interior.component.css
+++ b/src/app/components/interior/interior.component.css
@@ -1,10 +1,77 @@
-.img-bg{
-    position: absolute;
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 100%;
-  }
+
   .footer{
-      margin-top:420px !important;
+      margin-top:470px !important;
+  }
+  /* @media screen and (min-width:320px) {
+      .footer {
+          margin-top:600px !important;
+          position: relative;
+      }
+  }
+  @media screen and (min-width:1920px) {
+    .footer {
+        margin-top:300px !important;
+        position: relative;
+    }
+} */
+
+.header{
+    position: absolute !important;
+  }
+
+
+.item:nth-child(1) {
+    background: url(/assets/images/28-DCB-Interiors.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+/* .item:nth-child(2) {
+    background: url(/assets/images/27-DCB-P&T-4-0.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+.item:nth-child(3) {
+    background: url(/assets/images/28-DCB-Interiors.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+} */
+.carousel {
+    z-index: -99 !important;
+}
+
+.carousel .item {
+    position: fixed !important;
+    width: 100% !important;
+    height: 100%!important;
+}
+.carousel-inner .carousel-item{
+    transition: -webkit-transform 4s ease;
+    transition: transform 4s ease;
+    transition: transform 4s ease, -webkit-transform 4s ease;
+  }
+  @media screen and (max-width:1200px){
+    .header {
+        margin-left: 0% !important;
+    }
+  }
+  @media screen and (min-width:1314px) and (max-width:1450px) {
+    .header {
+        margin-left: 5% !important;
+    }
+  }
+  @media screen and (min-width:1450px) {
+    .header {
+        margin-left: 18% !important;
+    }
+  }
+  @media screen and (min-width:1450px) and (max-width:1700px) {
+    .header {
+        margin-left: 12% !important;
+    }
   }
