--- a/src/app/components/nahb/nahb.component.html
+++ b/src/app/components/nahb/nahb.component.html
@@ -1,93 +1,82 @@
-<div class="pt-3 pb-2">
+<div class="pt-4 pb-3">
         <app-header class="header-text-black"></app-header>
     </div>
-        <section class=" container">
+        <section class="container">
               <div class="row h-75" style="height:420px; overflow:auto;" >
-                <div class="col-sm-12 h-100" style="background-image: url('../../../assets/images/interior2.jpg'); background-size: cover">
-               
-                    <div class="row pt-2 h-100">
-                    <div class="col-sm-4 text-white pt-5 h-100">
-                        <p class="small nahb-text  ">
-                                Cataldo Builders - E. Falmouth, MÅ.<br>
-                                Compo Inc - Novi' MI.<br>
-                                Denman Construction - Whitefish, MT.<br>
-                                Buffington Homes - Johns Island, SC.<br>
-                                Ellis Custom Homes - College Station, TX.<br>
-                                TM O'Grady - Luguna, CA.<br>
-                                David Campbell Buil<br>
-                                Sydney AUS<br>
-                                Hardwick GC<br>
-                                G Little - P" T" _od,<br>
-                                Olsen Custom<br>
-                                mes - Dayton<br>
-                                Ilders - Cabin John<br>
+                   
+                <div class="col-md-12 h-100 w-100 img" style="background-image: url('../../../assets/DCB Stair wall2.jpg'); background-size: cover">
+                    <div class="row pt-3 mt-4 " style="overflow: auto;position: absolute;">
+                            <div class="col-sm-12 col-md-8 col-lg-12">
+                     <p class="text-white small nahb-text">
+                      Please enjoy browsing our fellow Builder 20 Club members website below:
+                    </p>
+                            </div>
+                            </div>
+                    <div class="row pt-2 h-100 mt-4">
+                       
+                    <div class="col-md-4 col-sm-8 text-white pt-5 h-100">
+                        <p class="small nahb-text pt-3">
+                                <a target="_blank" href="https://cataldobuilders.com">Cataldo Builders - E. Falmouth, MA.</a><br>
+                                <a target="_blank" href="http://www.compoinc.com/"> Compo Inc - Novi' MI.</a><br>
+                                <a target="_blank" href="https://denmanconstruction.com"> Denman Construction - Whitefish, MT.</a><br>
+                                
+                                <a target="_blank" href="https://www.buffingtonhomes.com">  Buffington Homes - Johns Island, SC.</a><br>
+                                <a target="_blank" href="https://www.elliscustomhomes.com">  Ellis Custom Homes - College Station, TX.</a><br>
+                                <a target="_blank" href="https://tmgrady.com">  TM O'Grady - Luguna, CA.</a><br>
+                               
+                                <a target="_blank" href="https://www.hardwickgc.com/"> Hardwick GC - Maitland, FL.</a><br>
+                                <a target="_blank" href="https://g-little.com/">  G Little - Port Townsend, WA.</a><br>
+                                <a target="_blank" href="http://olsencustomhomes.com/">  Olsen Custom Homes - Daytona Beach, FL.</a><br>
+                                <a target="_blank" href="https://www.cabinjohnbuilders.com/"> Cabin John Builders - Cabin John, MD.</a><br>
                         </p>
                     </div>
-                    <div class="col-sm-4 text-white pt-5  h-100">
-                        <p class="small nahb-text">
-                                Schneider Custom Builders - Norfolk<br>
-                                Matt Sitra Homes - Austin, TX.<br>
-                                The Troxel Company - Holland, MI.<br>
-                                Providence Homes Inc - Arlington, TX.<br>
-                                Augusta Homes - Cornelius NC.<br>
-                                Home Source Builders - Asheville, NC. •<br>
-                                Baud Guilders- Wakefield, RI.<br>
-                                Ed Nikles - Milfford, PA.<br>
+                    <div class="col-md-4 col-sm-8 text-white pt-5 h-100">
+                        <p class="small nahb-text mb-5 pt-3">
+                                
+                                <a target="_blank" href="https://schneidercustombuilders.com/">Schneider Custom Builders - Norfolk, VA.</a><br>
+                                <a target="_blank" href="http://mattsitrahomes.com/"> Matt Sitra Homes - Austin, TX.</a><br>
+                                <a target="_blank" href="https://www.troxelcustomhomes.com/"> The Troxel Company - Holland, MI.</a><br>
+                                <a target="_blank" href="http://providencehomesinc.net/">  Providence Homes Inc - Arlington, TX.</a><br>
+                                <a target="_blank" href="https://www.augustahomesnc.com/">   Augusta Homes - Cornelius NC.</a><br>
+                                <a target="_blank" href="https://www.homesourcebuilders.com/">  Home Source Builders - Asheville, NC.</a><br>
+                                <a target="_blank" href="https://baudbuilders.com/"> Baud Guilders- Wakefield, RI.</a><br>
+                                <a target="_blank" href="http://www.ednikles.com/"> Ed Nikles - Milfford, PA.</a><br>
+                            
+                            
                         </p>
                     </div>
-
-                    <div class="col-sm-4  h-75">
-                        <p class="small Association h-75 pt-2" >
-                               <strong>The National "Association of Home Builders<br>
-                                men Builder 20 Clubs</strong><br><br>
+                    <div class="col-md-4 col-sm-8 h-75">
+                        <p class="small Association h-75" style="overflow: auto;" >
+                               <strong>The National Association of Home Builders<br>
+                                Craftsmen Builder 20 Clubs</strong><br><br>
                                 David has been an active member of the<br>
                                 prestigious NAHB since 2013 and the only<br>
                                 member represented in Australia.<br>
                                 Within the NAHB is The Builder 20 Club,<br>
                                 made up of some of the finest builders from<br>
                                 around America.<br>
-                                The Builder 20 CIOb meet twice a year an<br>
+                                The Builder 20 Club meet twice a year and<br>
                                 discuss all matters of business in the building<br>
-                                industry. They critique; dnalyse and consult<br>
-                                on all aspects'of DCB's building businuss.<br>
-                               
+                                industry. They critique,analyse and consult<br>
+                                on all aspects of DCB's building business.<br>
                         </p>
                     
-                        <img src="../../../assets/DCB Web Logos/nahb-1.png"class=" w-75 pt-2 pl-2" >
-                
+                        <img src="../../../assets/DCB Web Logos/nahb-1.png" class=" main-logo w-75 pb-3 pl-2 h-50">
                     </div>
-
                 </div>
                  </div>
-                    
             </div>
-            <div class="row pt-3">
-                <div class="col-sm-5"></div>
-                <!-- <div class="col-sm-1 border"></div> -->
-
-                <div class="col-sm-7">
-                    
-                    <img src="../../../assets/DCB Web Logos/MBA NSW.png" class="ml-4 mr-2" height="60px">
-                    <img src="../../../assets/DCB Web Logos/HIA_Logo.png" class="ml-4 mr-2" width="40px" height="50px">
-                    <img src="../../../assets/DCB Web Logos/houzz master.png" class="ml-4 mr-2" width="55px" height="50px" >
-                    <img src="../../../assets/DCB Web Logos/Control 4 no bg 2.png" class="ml-4" width="140px"  >
-
-
-                </div>
+            <div class="row pt-2 text-right">
+                <div class="col-md-12 col-sm-12 col-lg-12">
+                    <img src="../../../assets/DCB Web Logos/MBA NSW.png" class="logo1 ml-2 mr-2"  height="60px">
+                    <img src="../../../assets/DCB Web Logos/HIA_Logo.png" class="logo2 ml-2 mr-2" width="40px" height="50px">
+                    <img src="../../../assets/DCB Web Logos/houzz master.png" class="logo3 ml-2 mr-2"  width="55px" height="50px" >
+                    <img src="../../../assets/DCB Web Logos/Control 4 no bg 2.png" class="logo4 ml-2 mr-2" width="140px"  >
+                </div>  
             </div>
         </section>
         <section>
-            <!-- <div class="row">
-                <div class="col-sm-8">
-                    <div class="row">
-
-                    </div>
-                    
-                </div>
-                <div class="col-sm-4"></div>
-
-            </div>
-        </section> -->
-        <div class="pr-4 pt-3">
+        </section>
+        <!-- <div class="pr-4 pt-4 ">
         <app-footer></app-footer>
-    </div>
+    </div> -->
