--- a/src/app/components/project/project.component.css
+++ b/src/app/components/project/project.component.css
@@ -1,17 +1,273 @@
-.img-bg{
-    position: absolute;
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 100%;
+ .footer {
+    margin-top: 450px !important;
   }
-  .footer {
-      margin-top: 450px !important;
-    }
+.testimonial-1 {
+ margin-top:15%;
+ position: absolute;
+}
+.testimonial-text {
+ margin-left: 30%;
+ margin-right:30%;
+}
 
-    .nav-link  {
-      color: white !important;
-    }
+.header{
+  position: absolute !important;
+}
+
+
+.item:nth-child(1) {
+background: url(/assets/images/12-DCB-P&T-1.jpg) no-repeat center center fixed;
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
+}
+.item:nth-child(2) {
+background: url(/assets/images/13-DCB-P&T-1.jpg) no-repeat center center fixed;
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
+}
+.item:nth-child(3) {
+background: url(/assets/images/14-DCB-P&T-1.jpg) no-repeat center center fixed;
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
+}
+.item:nth-child(4) {
+/* background: url(/assets/images/white.jpg) no-repeat center center fixed; */
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
+
+}
+.item:nth-child(5) {
+background: url(/assets/images/16-DCB-proj-2-Seed.jpg) no-repeat center center fixed;
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
+}
+.item:nth-child(6) {
+background: url(/assets/images/17-DCB-proj-2.jpg) no-repeat center center fixed;
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
+}
+.item:nth-child(7) {
+background: url(/assets/images/18-DCB-proj-2.jpg) no-repeat center center fixed;
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
+}
+.item:nth-child(8) {
+background: url(/assets/images/19-DCB-proj-2.jpg) no-repeat center center fixed;
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
+}
+.item:nth-child(9) {
+background: url(/assets/images/20-DCB-proj-2.jpg) no-repeat center center fixed;
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
+}
+.item:nth-child(10) {
+background: url(/assets/images/21-DCB-proj-2-0.jpg) no-repeat center center fixed;
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
+}
+.item:nth-child(11) {
+/* background: url(/assets/images/26-DCB-proj-4.jpg) no-repeat center center fixed; */
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
+}
+.item:nth-child(12) {
+background: url(/assets/images/23-DCB-proj-3.jpg) no-repeat center center fixed;
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
+}
+.item:nth-child(13) {
+background: url(/assets/images/24-DCB-proj-3-0.jpg) no-repeat center center fixed;
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
+}
+.item:nth-child(14) {
+  background: url(/assets/images/26-DCB-proj-4.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  }
+.item:nth-child(15) {
+/* background: url(/assets/images/26-DCB-proj-4.jpg) no-repeat center center fixed; */
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
+}
+
+.item:nth-child(16) {
+background: url(/assets/images/27-DCB-P&T-4-0.jpg) no-repeat center center fixed;
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
+}
+.item:nth-child(17) {
+background: url(/assets/images/28-DCB-Interiors.jpg) no-repeat center center fixed;
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
+}
+.carousel {
+  z-index: -99 !important;
+}
+
+.carousel .item {
+  position: fixed !important;
+  width: 100% !important;
+  height: 100%!important;
   
+}
+/* .carousel-inner .carousel-item{
+  transition: -webkit-transform 3s ;
+  transition: transform 3s ease;
+  transition: transform 3s ease, -webkit-transform 3s ease;
+} */
 
-    
+/* .carousel-fade 
+.carousel-inner 
+  .item {
+    opacity: 0;
+    transition-property: opacity;
+  }
+
+  .active {
+    opacity: 1;
+  }
+
+  .active.left,
+  .active.right {
+    left: 0;
+    opacity: 0;
+    z-index: 1;
+  }
+
+  .next.left,
+  .prev.right {
+    opacity: 1;
+  } */
+
+
+/* .carousel-control {
+  z-index: 2;
+} */
+@media screen and (max-width:1200px){
+  .header {
+      margin-left: 0% !important;
+  }
+}
+@media screen and (min-width:1314px){
+  .header {
+      margin-left: 5% !important;
+  }
+}
+@media screen and (min-width:1450px){
+  .header {
+      margin-left: 18% !important;
+  }
+}
+@media screen and (min-width:1450px) and (max-width:1700px) {
+  .header {
+      margin-left: 12% !important;
+  }
+}
+
+@media screen and (max-width:767px) {
+  p {
+    padding:15px !important;
+  }
+}
+/* .carousel-fade {
+  transition-property: opacity;
+}
+  .carousel-inner {
+    transition-property: opacity;
+  }
+      .item {
+          transition-property: opacity;
+      }
+      
+      .item,
+      .active.left,
+      .active.right {
+          opacity: 1;
+      }
+
+      .active,
+      .next.left,
+      .prev.right {
+          opacity: 0;
+      }
+
+      .next,
+      .prev,
+      .active.left,
+      .active.right {
+          left: 0;
+          transform: translate3d(0, 0, 0);
+      }
+
+      .carousel-control {
+      z-index: 2;
+  } */
+  
+  /* Fade transition for carousel items */
+.carousel .item {
+  left: 0 !important;
+    -webkit-transition: opacity .7s; /*adjust timing here */
+       -moz-transition: opacity .7s;
+         -o-transition: opacity .7s;
+            transition: opacity .7s;
+            transition-delay: 4s;
+}
+.carousel-control {
+  background-image: none !important; /* remove background gradients on controls */
+}
+/* Fade controls with items */
+.next.left,
+.prev.right {
+  opacity: 1;
+  z-index: 1;
+}
+.active.left,
+.active.right {
+  opacity: 0;
+  z-index: 2;
+}
+
+.small {
+  letter-spacing: 1px;
+  font-size: 14px !important;
+  font-weight: 500 !important;
+}
+
+
+ 
