--- a/src/app/components/the-team/the-team.component.html
+++ b/src/app/components/the-team/the-team.component.html
@@ -1,4 +1,4 @@
-<div class="pt-4 pb-4">
+<!-- <div class="pt-4 pb-4">
         <app-header class="header-text-black"></app-header>
     </div>
         <section class=" container h-75">
@@ -32,7 +32,98 @@
 
                 </div>
             </div>
-        </section>
-        <div class="pr-5">
+        </section> -->
+        <!-- <div class="pr-5">
         <app-footer></app-footer>
+    </div> -->
+<!-- <div class="container pt-5 mt-5 text-dark">
+    <div class="row border">
+        <div class="col-sm-12 border">
+                <div id="carouselExampleSlidesOnly3" class="carousel slide border" data-ride="carousel" data-interval="6000">
+                        <div class="carousel-inner border">
+                                <div class="carousel-item active border">
+                                        <div class="row border">
+                                                <div class="col-sm-6 border">
+                                                    
+                                                    <div id="carouselExampleSlidesOnly1" class="carousel slide border" data-ride="carousel">
+                                                        <div class="carousel-inner">
+                                                                <div class="carousel-item active">
+                                                                        <img class="d-block w-100" src="../../../assets/images/13-DCB-P&T-1.jpg" alt="First slide">
+                                                                    </div>
+                                                                    <div class="carousel-item">
+                                                                        <img class="d-block w-100" src="../../../assets/images/12-DCB-P&T-1.jpg" alt="Second slide">
+                                                                    </div>
+                                                                    <div class="carousel-item">
+                                                                        <img class="d-block w-100" src="../../../assets/images/14-DCB-P&T-1.jpg" alt="Third slide">
+                                                                    </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="col-sm-6 border">
+                                                    <div id="carouselExampleSlidesOnly4" class="carousel slide border" data-ride="carousel">
+                                                        <div class="carousel-inner">
+                                                            <div class="carousel-item active">
+                                                                <img class="d-block w-100" src="../../../assets/images/12-DCB-P&T-1.jpg" alt="First slide">
+                                                            </div>
+                                                            <div class="carousel-item">
+                                                                <img class="d-block w-100" src="../../../assets/images/14-DCB-P&T-1.jpg" alt="Second slide">
+                                                            </div>
+                                                            <div class="carousel-item">
+                                                                <img class="d-block w-100" src="../../../assets/images/13-DCB-P&T-1.jpg" alt="Third slide">
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                    </div>
+                                    <div class="carousel-item">
+                                            <div id="carouselExampleSlidesOnly" class="carousel slide border" data-ride="carousel">
+                                                    <div class="carousel-inner">
+                                                        <div class="carousel-item active">
+                                                            <img class="d-block w-100" src="../../../assets/images/12-DCB-P&T-1.jpg" alt="First slide">
+                                                        </div>
+                                                        <div class="carousel-item">
+                                                            <img class="d-block w-100" src="../../../assets/images/14-DCB-P&T-1.jpg" alt="Second slide">
+                                                        </div>
+                                                        <div class="carousel-item">
+                                                            <img class="d-block w-100" src="../../../assets/images/13-DCB-P&T-1.jpg" alt="Third slide">
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img class="d-block w-100" src="../../../assets/images/14-DCB-P&T-1.jpg" alt="Third slide">
+                                    </div>
+                        </div>
+                    </div>
+          
+    
     </div>
+</div>
+</div>  -->
+<app-header class="header-text-black"></app-header>
+
+
+
+       
+<div id="carouselExampleControls" class="animated infinite slideOutLeft delay-6s" data-ride="carousel" data-interval="6000">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="../../../assets/croped/DCB Home9.png" alt="First slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="../../../assets/croped/DCB Home9.png" alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="../../../assets/croped/DCB Home9.png" alt="Third slide">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
